--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   device_info_plus: ^12.3.0
   package_info_plus: ^8.0.0
   image_picker: ^1.2.1
+  image_cropper: ^11.0.0
   go_router: ^14.8.1
   pinput: ^6.0.1
   
