share as image added

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,9 @@ dependencies:
   image_cropper: ^11.0.0
   go_router: ^14.8.1
   pinput: ^6.0.1
+  screenshot: ^3.0.0
+  path_provider: ^2.1.5
+  share_plus: ^12.0.1
   
 
 dev_dependencies:
