--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,9 @@ dependencies:
   screenshot: ^3.0.0
   path_provider: ^2.1.5
   share_plus: ^12.0.1
+  # image_gallery_saver: ^2.0.3
+  permission_handler: ^12.0.1
+  gal: ^2.3.2
   
 
 dev_dependencies:
