--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,9 @@ dependencies:
   # image_gallery_saver: ^2.0.3
   permission_handler: ^12.0.1
   gal: ^2.3.2
+  url_launcher: ^6.3.2
+  audioplayers: ^6.5.1
+  vibration: ^3.1.5
   
 
 dev_dependencies:
@@ -78,6 +81,7 @@ flutter:
     - assets/phoneicon.png
     - assets/logo.png
     - assets/noprofile.jpg
+    - assets/start.mp3
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
