--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -59,6 +59,8 @@ android {
 
     buildTypes {
         release {
+            minifyEnabled false
+            shrinkResources false
             signingConfig signingConfigs.release
         }
     }
