--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,7 +52,12 @@ dependencies:
   url_launcher: ^6.3.2
   audioplayers: ^6.5.1
   vibration: ^3.1.5
+  flutter_launcher_icons: ^0.14.4
   
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/logo.png"
 
 dev_dependencies:
   flutter_test:
